# georgeforge

./: .isort.cfg  .prettierignore  README.md  devenv.nix  devenv.yaml  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.github/workflows/: automated-checks.yaml  potential-duplicates.yaml  pypi-release.yaml  renovate.yaml
georgeforge/: __init__.py  admin.py  models.py  tasks.py  views.py
georgeforge/migrations/: 0001_initial.py  0001_squashed_0020_alter_order_deposit_alter_order_paid_and_more.py  0021_alter_order_deliverysystem.py  0030_alter_deliverysystem_system_alter_forsale_eve_type_and_more.py
georgeforge/templates/georgeforge/views/: store.html
georgeforge/templatetags/: georgeforge_extras.py
